--- a/ch/src/app/components/Player/VideoPlayer.css
+++ b/ch/src/app/components/Player/VideoPlayer.css
@@ -91,7 +91,7 @@
   width: max-content;
   padding: 0.5rem 0.75rem;
   border-radius: 5px;
-  background-color: rgba(99, 42, 133, 0.8);
+  background-color: oklch(var(--b2));
   font-weight: 600;
   pointer-events: none;
   opacity: 0;
